--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URL="mongodb+srv://adityathakare0974_db_user:PgLOXt6JOjozY8lT@cluster0.exnkwag.mongodb.net/?appName=Cluster0"
 PORT=4000
+JWT_SECRET=supersecret
