--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:4000
-DASHBOARD_URL=http://localhost:5174
+VITE_BACKEND_URL=https://stock-trading-platform-backend-yw9b.onrender.com
+VITE_DASHBOARD_URL=http://localhost:5174
